--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.1.4",
+    "next": "^15.2.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
